@@ -34,6 +34,7 @@
 * Patch 3138574: NoImportLib ignored in Windows makefiles dependencies (rjmyst3)
 * Patch 3367641: Remove warnings in Xcode 4
 * Patch 3372345: Gmake action's PCHs don't work with Mingw (Martin Ridgers)
+* Patch 3317329: Support vstudio CompileAs for mixed-language projects (xpol)
 
 
 -------
